--- a/HovText/Properties/Resources.resx
+++ b/HovText/Properties/Resources.resx
@@ -133,6 +133,12 @@
   <data name="Square_New_Active_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Square_New_Active_48x48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Square_New_Hotkey_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Square_New_Hotkey_48x48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Square_New_Inactive_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Square_New_Inactive_48x48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Square_Old_Active_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Square_Old_Active_16x16.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
